# ruagent-compat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: compatibility-failure.yml
.github/workflows/: ci.yml
docs/: case-format.md
examples/: reference.html  reference.json  structured_output_audit.py
src/ruagent_compat/: __init__.py  adapters.py  cli.py  errors.py  models.py  reference.py  reporting.py  runner.py  structured_output.py  tools.py
tests/: test_adapters.py  test_reference.py  test_runner.py  test_structured_output.py  test_tools.py
