[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ruagent-compat"
version = "0.2.0"
description = "Provider-neutral executable contracts for reliable tool-using agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ruagent-compat contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "types-jsonschema>=4.23",
]

[project.scripts]
ruagent-compat = "ruagent_compat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ruagent_compat"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ruagent_compat"]
